Ensure PeopleHandler only calls PSS::RequestStart in response to intention to configure sync

Currently PSS::RequestStart is called from PushSyncPrefs() which can be
triggered by internal sync state changes. This call unsuppresses sync.

Instead PSS::RequestStart should be called only in response to user actions to
configure sync. I think OpenSyncSetup() is a good place.

BUG=694762
R=tommycli@chromium.org

Review-Url: https://codereview.chromium.org/2711993002
Cr-Commit-Position: refs/heads/master@{#453457}

Former-commit-id: a6f225f3f8a8fb31228e038217484ffff259463c